@@ -22,6 +22,7 @@
 		<maxstamina><random min="81" max="100"/></maxstamina>
 		<maxmana><random min="151" max="200"/></maxmana>
 		<!-- Skills -->
+		<archery><random min="901" max="1000"/></archery>
 		<wrestling><random min="901" max="1000"/></wrestling>
 		<tactics><random min="951" max="1000"/></tactics>
 		<magicresistance><random min="1201" max="1300"/></magicresistance>
@@ -42,8 +43,17 @@
 		<tag name="res_cold" value="40,50" type="int" />
 		<tag name="res_poison" value="20,25" type="int" />
 		<tag name="res_energy" value="40,50" type="int" />
+		<!-- Equiped -->
+		<equipped>
+			<item id="13b1" /> <!-- Bow -->
+			<item id="e75"> <!-- Backpack -->
+				<content>
+					<item id="f3f"><amount><random min="50" max="70"/></amount></item> <!-- Arrows -->
+				</content>
+			</item>
+		</equipped>
 		<!-- Loot Packs -->
-		<!-- Missing: 10-30 Bandages, 50-70 Arrows, Magic Items, Juka Slayer Bow, 1 Arcane Gem -->
+		<!-- Missing: 10-30 Bandages, Magic Items, Juka Slayer Bow, 1 Arcane Gem -->
 		<lootpacks>gems;gold_rich;gold_meager</lootpacks>
 		<!-- Misc. -->
 		<category>Monsters\Juka\Juka Lord</category>
